--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1669,16 +1669,62 @@ div.tagsinput span.tag a {
 }
 
 select.form-control {
-    color: #333;
-    background-color: #fff;
-    option {
-        color: #333;
-        background-color: #fff;
-        padding: 8px;
-    }
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: #ffffff;
+    color: #333333;
+    font-size: 14px;
+    padding: 8px 12px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    cursor: pointer;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%23333333' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-size: 12px;
+
     &:focus {
-        border-color: #66afe9;
-        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+        border-color: #4a90e2;
+        box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
+        outline: none;
+    }
+
+    option {
+        background-color: #ffffff;
+        color: #333333;
+        padding: 12px;
+        font-size: 14px;
+        
+        &:hover,
+        &:focus,
+        &:active {
+            background-color: #f5f5f5;
+            color: #333333;
+        }
+    }
+
+    &:disabled {
+        background-color: #f5f5f5;
+        cursor: not-allowed;
+        opacity: 0.7;
+    }
+}
+
+// Style for form groups containing selects
+.form-group {
+    select.form-control {
+        margin-bottom: 0;
+        width: 100%;
+        
+        & + .help-block {
+            margin-top: 5px;
+            color: #666666;
+        }
+    }
+
+    label + select.form-control {
+        margin-top: 5px;
     }
 }
 
